--- a/app/src/main/res/layout/cardview_project_layout.xml
+++ b/app/src/main/res/layout/cardview_project_layout.xml
@@ -3,9 +3,11 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_margin="5dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_height="wrap_content"
+    android:layout_marginLeft="7dp"
+    android:layout_marginRight="7dp"
+    android:layout_marginTop="7dp"
+    card_view:cardCornerRadius="7dp">
 
     <LinearLayout
         android:layout_width="match_parent"
