--- a/app/src/main/res/layout/activity_begin.xml
+++ b/app/src/main/res/layout/activity_begin.xml
@@ -8,7 +8,7 @@
     android:gravity="center_vertical|center_horizontal"
     android:orientation="vertical"
     android:background="@drawable/another_background"
-    tools:context=".activity.BeginActivity">
+    tools:context=".activity.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
