--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="REDMINE"
+                    android:textSize="20dp"
+                    android:textStyle="bold"
+                    android:textColor="#f03131"
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/toolbar_title"
