--- a/app/src/main/res/layout/cardview_project_list.xml
+++ b/app/src/main/res/layout/cardview_project_list.xml
@@ -5,10 +5,10 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="7dp"
-    android:layout_marginRight="7dp"
-    android:layout_marginTop="7dp"
-    card_view:cardCornerRadius="4dp">
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="5dp"
+    android:layout_marginTop="5dp"
+    card_view:cardCornerRadius="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +29,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_vertical"
-            android:textSize="14sp"/>
+            android:textStyle="bold"
+            android:textColor="#ff0000"
+            android:textSize="18sp"/>
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
